--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Git Ignore Configuration
+# Specifies intentionally untracked files that Git should ignore
+
 .DS_Store
 /Dataprovider
 /Barter
+/.vscode
+/.idea
