--- a/Writer - Prompt Improver/Prompts/agent_starter_prompt.yaml
+++ b/Writer - Prompt Improver/Prompts/agent_starter_prompt.yaml
@@ -17,7 +17,7 @@ user_inputs:
 # ───────────────────────────────────────────────────────────────
 agents_md_locations:
   search::
-    - ./AGENTS.md
+    - /AGENTS.md
 
   redirect_signals:
     - "WARP.md: STOP - READ AGENTS.md INSTEAD"
