--- a/DEV - Workflows/Prompts/parallel_sub_agents/code_plan_parallel.yaml
+++ b/DEV - Workflows/Prompts/parallel_sub_agents/code_plan_parallel.yaml
@@ -94,7 +94,7 @@ field_handling:
     auto_folder: "./plans/[YYYY-MM]/[project-slug]/"
 
 # ───────────────────────────────────────────────────────────────
-# WORKFLOW
+# WORKFLOW (PARALLEL OUTPUT QA BY MAIN AGENT)
 # ───────────────────────────────────────────────────────────────
 workflow:
   step_1_initialization:
