--- a/DEV - Workflows/Prompts/parallel_sub_agents/speckit_complete_auto_parallel.yaml
+++ b/DEV - Workflows/Prompts/parallel_sub_agents/speckit_complete_auto_parallel.yaml
@@ -78,7 +78,7 @@ sub_agents:
     - { id: synthesizerC, name: Lead Synthesizer (C), role: quality_report }
 
 # ───────────────────────────────────────────────────────────────
-# WORKFLOW (AUTONOMOUS WITH PARALLEL BLOCKS)
+# WORKFLOW (PARALLEL OUTPUT QA BY MAIN AGENT)
 # ───────────────────────────────────────────────────────────────
 workflow:
   step_0_request_analysis:
@@ -97,7 +97,7 @@ workflow:
     command: /speckit.checklist
 
   # Stage A: Planning/Spec parallel block
-  step_5a_parallel_planning:
+  step_5_parallel_planning:
     parallel_work:
       execution: parallel
       concurrency: 3
@@ -114,6 +114,17 @@ workflow:
       output_files:
         - "[SPEC_FOLDER]/plan.md"
         - "[SPEC_FOLDER]/planning-summary.md"
+    main_agent_finalization:
+      by: MAIN_AGENT
+      action: QA review and finalization of planning artifacts
+      checks:
+        - confirm_alignment_with_request_and_context
+        - validate_completeness_and_consistency
+        - ensure_output_format_and_sections_present
+        - resolve_remaining_open_questions_or_note_them
+      outputs:
+        - main_agent_review_notes
+        - final_signoff: true
 
   step_6_task_breakdown:
     command: /tasks
@@ -122,7 +133,7 @@ workflow:
     command: /analyze
 
   # Stage B: Implementation preparation parallel block
-  step_7a_parallel_implementation_prep:
+  step_8_parallel_implementation_prep:
     parallel_work:
       execution: parallel
       concurrency: 3
@@ -138,15 +149,26 @@ workflow:
       by: synthesizerB
       output_files:
         - "[SPEC_FOLDER]/implementation_plan.md"
+    main_agent_finalization:
+      by: MAIN_AGENT
+      action: QA review and finalization of implementation plan
+      checks:
+        - confirm_alignment_with_request_and_context
+        - validate_completeness_and_consistency
+        - ensure_output_format_and_sections_present
+        - resolve_remaining_open_questions_or_note_them
+      outputs:
+        - main_agent_review_notes
+        - final_signoff: true
 
-  step_8_implementation_check:
+  step_9_implementation_check:
     command: /implement [task-id]
 
-  step_9_development:
+  step_10_development:
     approach: autonomous_implementation_with_checkpoints
 
   # Stage C: Quality/Review parallel block
-  step_9a_parallel_quality_review:
+  step_11_parallel_quality_review:
     parallel_work:
       execution: parallel
       concurrency: 3
@@ -162,12 +184,23 @@ workflow:
       by: synthesizerC
       output_files:
         - "[SPEC_FOLDER]/quality_report.md"
+    main_agent_finalization:
+      by: MAIN_AGENT
+      action: QA review and finalization of quality report
+      checks:
+        - confirm_alignment_with_request_and_context
+        - validate_completeness_and_consistency
+        - ensure_output_format_and_sections_present
+        - resolve_remaining_open_questions_or_note_them
+      outputs:
+        - main_agent_review_notes
+        - final_signoff: true
 
-  step_10_completion:
+  step_12_completion:
     summary_document:
       location: specs/[NNN-feature]/implementation-summary.md
 
-  step_11_branch_integration:
+  step_13_branch_integration:
     approval_gate:
       type: USER_APPROVAL_REQUIRED
       prompt: "All checks passed. Would you like me to push this branch to main now to keep main up to date and minimize conflicts?"
